# ec2-discord-music-bot

./: .dockerignore  Dockerfile  README.md  bot.py  requirements.txt
weather_chatbot/Archive/: test.py  test_langfuse.py  weather_langgraph_chat.py
weather_chatbot/backend/: README.md  api.py  main.py  pyproject.toml
weather_chatbot/backend/config/: settings.py
weather_chatbot/backend/src/: api.py  tools.py
weather_chatbot/frontend/src/: App.js  main.jsx  styles.css
weather_chatbot/frontend/src/components/: ChatInput.jsx  ChatWindow.jsx
weather_chatbot/frontend/src/services/: api.js
